--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="edu.crabium.android"
+      package="edu.crabium.android.geekclock"
       android:versionCode="1"
       android:versionName="2.3">
     <uses-sdk android:minSdkVersion="8" />
@@ -46,7 +46,7 @@
    		<activity android:name="TimeServerListActivity"
 				  android:screenOrientation="portrait"
 				  android:configChanges="orientation|keyboardHidden" > </activity>
-   		<activity android:name="AboutActivity"
+   		<activity android:name=".geekclock.AboutActivity"
 				  android:screenOrientation="portrait"
 				  android:configChanges="orientation|keyboardHidden" > </activity>
  
