--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,7 @@
    		<activity android:name="TimeServerListActivity"
 				  android:screenOrientation="portrait"
 				  android:configChanges="orientation|keyboardHidden" > </activity>
-   		<activity android:name="AboutActivity"
+   		<activity android:name=".AboutActivity"
 				  android:screenOrientation="portrait"
 				  android:configChanges="orientation|keyboardHidden" > </activity>
  
