--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,57 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="edu.crabium.android.geekclock"
-      android:versionCode="1"
-      android:versionName="2.3">
+    package="edu.crabium.android.geekclock"
+    android:versionCode="1"
+    android:versionName="2.3" >
+
     <uses-sdk android:minSdkVersion="8" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".MainActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden"
-                  android:label="@string/app_name">
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name="ShowTimeActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-        <activity android:name="MoreActivity" 
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden"> </activity>
-         <activity android:name="HelpActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-        <activity android:name="ThanksActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-		<activity android:name="SetActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-		<activity android:name="ReadFrequencyActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-  		<activity android:name="TurntableActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-   		<activity android:name="GeonamesRegisterActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-   		<activity android:name="TimeServerListActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-   		<activity android:name="AboutActivity"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
-   		<activity android:name=".wheel.WheelView"
-				  android:screenOrientation="portrait"
-				  android:configChanges="orientation|keyboardHidden" > </activity>
- 
+
+        <service android:name=".TimeService" />
+
+        <activity
+            android:name="ShowTimeActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="MoreActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="HelpActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="ThanksActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="SetActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="ReadFrequencyActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="TurntableActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="GeonamesRegisterActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="TimeServerListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="AboutActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".wheel.WheelView"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
+
 </manifest>
