--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,12 +52,12 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="SetActivity"
+            android:name=".PreferencesActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="ReadFrequencyActivity"
+            android:name=".RefreshFrequencyActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" >
         </activity>
